[package]
name = "learning_graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
csv ="1.1.6"
nom = "7.0.0"
geoutils = "0.4.1"
ordered-float = "2.7.0"